--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,37 +1,67 @@
 * {
     box-sizing: border-box;
-    margin : 0;
-    padding : 0;
+    margin: 0;
+    padding: 0;
 }
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background: rgb(204,0,0);
-    background: linear-gradient(90deg, rgba(204,0,0,1) 0%, rgba(255,0,0,1) 35%);
+    background: rgb(204, 0, 0);
+    background: linear-gradient(
+        90deg,
+        rgba(204, 0, 0, 1) 0%,
+        rgba(255, 0, 0, 1) 35%
+    );
+}
+
+.errorMsg {
+    text-align: center;
+    width: 100%;
+    background-color: #ffbaba;
+    color: rgba(204, 0, 0, 1);
+    padding: 10px 0px;
+    border-radius: 5px;
+    margin-bottom: 30px;
 }
 
 main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #FFF;
+    background-color: #fff;
     width: 500px;
-    margin : 50px auto;
-    padding : 50px 10px;
+    margin: 50px auto;
+    padding: 50px 10px;
     border-radius: 20px;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 
 main img {
-    width : 320px;
+    width: 320px;
 }
 
 h1 {
     font-size: 1.6rem;
-    margin : 8px; 
+    margin: 8px;
 }
 
-p {
-    margin-bottom : 40px;
-    color : #808080
+.main-msg {
+    margin-bottom: 40px;
+    color: #808080;
+}
+
+.file-list {
+    width: 70%;
+    margin-top: 20px;
+    background-color: #ededed;
+    border-radius: 5px;
+    border: 1px solid #808080;
+    color: #808080;
+    list-style-type: none;
+    padding: 10px 30px;
+    font-size: 0.9rem;
+}
+
+.file-list li::before {
+    content: '📄 ';
 }
