--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -5,6 +5,10 @@
 }
 
 body {
+    min-height: 100vh;
+    display : flex;
+    justify-content: center;
+    align-items: center;
     font-family: Arial, Helvetica, sans-serif;
     background: rgb(204, 0, 0);
     background: linear-gradient(
@@ -30,7 +34,7 @@ main {
     align-items: center;
     background-color: #fff;
     width: 500px;
-    margin: 50px auto;
+    margin: 15px auto;
     padding: 20px;
     border-radius: 20px;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
@@ -41,7 +45,7 @@ main img {
     margin: 100px 0;
 }
 
-h1 {
+.title {
     font-size: 1.6rem;
     margin: 8px;
 }
@@ -65,4 +69,42 @@ h1 {
 
 .file-list li::before {
     content: '📄 ';
+}
+.input-file::file-selector-button {
+    padding : 5px 15px;
+}
+.submit-btn {
+    margin-top : 20px;
+    padding : 5px 30px;
+}
+
+@media only screen and (max-width : 768px) {
+    main {
+        min-height: 90vh;
+        width : 100vw;
+        max-width: 100vw;
+        border-radius: 0px;
+        justify-content: center;
+    }
+    main img {
+        box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+        margin-bottom: 120px;
+    }
+    .title {
+        font-size: 2rem;
+    }
+    form {
+        text-align: center;
+    }
+
+    .input-file::file-selector-button {
+        padding : 20px 30px;
+    }
+    .submit-btn {
+        margin-top : 20px;
+        padding : 20px 60px;
+    }
+    .file-list {
+        width: 100%;
+    }
 }
